# hidden-gem

./: .gitignore  CMakeLists.txt  ideas.txt
assets/: map.hgm  map.lem  map.txt  normal_map.xcf  tileset.json
assets/shaders/: fragment.fs  vertex.vs
level-editor/: CMakeLists.txt
level-editor/source/: asset.c  asset.h  edit_area.c  edit_area.h  editor.c  editor.h  editor_camera.c  editor_camera.h  editor_cursor.c  editor_cursor.h  editor_ui.c  editor_ui.h  input_action.h  log.c  main.c  nk_raylib.c  nk_raylib.h  nuklear_impl.c  panel.h  tilemap.c  tilemap.h  tileset.c  tileset.h
map-editor/: CMakeLists.txt
map-editor/assets/: tileset.json
map-editor/source/: collision.c  collision.h  dialog.c  dialog.h  editor.c  editor.h  editor_cursor.c  editor_ui.c  input_action.c  log.h  main.c  nk_raylib.c  nk_raylib.h  nuklear_impl.c  panel.c  tilemap.c  tilemap.h  tileset.c  tileset.h
map-format/: CMakeLists.txt  map_format.c
map-format/include/: map_format.h
source/: asset_manager.cpp  asset_manager.h  asset_manager_generic.h  collision.cpp  entity_prefab.cpp  game.cpp  game.h  gameplay_systems.cpp  light_source.cpp  light_source.h  main.cpp  texture_animation.cpp  tile.h  tilemap.h
source/ecs/: sparse_set.h  world.cpp  world.h
sources/: architecture_notes.txt  asset_manager.cpp  asset_manager.h  asset_manager.tpp  collision.h  entity_prefab.cpp  frame_animation.cpp  frame_animation.h  game.cpp  game.h  gameplay_systems.cpp  gameplay_systems.h  main.cpp  texture_animation.h  tilemap.cpp  tilemap.h
sources/ecs/: sparse_set.tpp  world.h
